--- a/compose_courses/src/main/res/values/strings.xml
+++ b/compose_courses/src/main/res/values/strings.xml
@@ -58,4 +58,7 @@
         <item quantity="one">%d cupcake</item>
         <item quantity="other">%d cupcakes</item>
     </plurals>
+
+    <string name="show_less">Show less</string>
+    <string name="show_more">Show more</string>
 </resources>
