--- a/compose/src/main/res/values/strings.xml
+++ b/compose/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
 
     <string name="compose_view_text">Compose View Sample</string>
+    <string name="android_view_title">Show custom view in Compose</string>
+    <string name="android_view_text">Just simple text</string>
 </resources>
